--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,16 @@
     },
     "prefer-stable": true,
     "minimum-stability": "dev",
-    "version": "3.0",
+    "version": "3.1",
     "require": {
         "php": "^7.1",
         "ext-json": "*",
         "ext-curl": "*",
         "ext-posix": "*",
         "symfony/process": "^4.4",
-        "deviscoding/mac-console": "^1.8.1"
+        "deviscoding/mac-console": "^1.8.1",
+        "symfony/dom-crawler": "^4.4",
+        "symfony/css-selector": "^4.4"
     },
     "config": {
         "platform": {
