Fixes issue with retrieving current version in configurations that extend MicrosoftInstaller.php, using some versions of macOS.

--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,13 @@
     },
     "prefer-stable": true,
     "minimum-stability": "dev",
-    "version": "3.4.1",
+    "version": "3.4.2",
     "require": {
         "php": "^7.1",
         "ext-json": "*",
         "ext-curl": "*",
         "ext-posix": "*",
+        "ext-simplexml": "*",
         "symfony/process": "^4.4",
         "deviscoding/mac-console": "^1.8.1",
         "symfony/dom-crawler": "^4.4",
