--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "minimum-stability": "dev",
     "version": "4.0",
     "require": {
-        "php": "^7.1",
+        "php": ">=7.1",
         "ext-json": "*",
         "ext-curl": "*",
         "ext-posix": "*",
