--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "prefer-stable": true,
     "minimum-stability": "dev",
-    "version": "4.0.3",
+    "version": "4.0.4",
     "require": {
         "php": ">=7.1",
         "ext-json": "*",
@@ -26,7 +26,8 @@
         "symfony/process": "^4.4",
         "deviscoding/mac-console": "^1.8.1",
         "symfony/dom-crawler": "^4.4",
-        "symfony/css-selector": "^4.4"
+        "symfony/css-selector": "^4.4",
+        "deviscoding/code-objects": "^1.2"
     },
     "config": {
         "platform": {
